--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -20,7 +20,7 @@
 
   <!-- Flash Messages (Ensure the path is correct) -->
   <div class="container">
-    <%- include("../includes/Flash.ejs") %>
+    <%- include("/includes/Flash.ejs") %>
     <%- body %>
   </div>
 
